<resources>
    <string name="app_name">PomodoroApp</string>
    <string name="timer">Timer</string>
    <string name="tarefas">Tarefas</string>
    <string name="editar">Editar</string>
    <string name="configurar">Configurar</string>
    <string name="perfil">Perfil</string>
    <string name="titleApp">Pomodoro App</string>
    <string name="title_secondary">Simplificando o seu modo de estudar com foco</string>
    <string name="cd_background_image">background image</string>
    <string name="tv_ola">Olá!</string>
    <string name="tv_cadastro_ola">Olá!</string>
    <string name="tv_bemVindo">Bem Vindo(a)!</string>
    <string name="tv_facaLogin">Faça seu Login</string>
    <string name="tv_crieSuaConta">Crie sua conta</string>
    <string name="tv_nome">Nome</string>
    <string name="tv_email">Email</string>
    <string name="tv_senha">Senha</string>
    <string name="tv_btn_login">LOGIN</string>
    <string name="tv_btn_cadastrar">CADASTRAR</string>
    <string name="tv_reset_senha">Esqueçeu sua senha?</string>
    <string name="tv_cadastre_se">Não tem conta? cadastre-se</string>
    <string name="tv_ou_entre_com">Ou entre com:</string>
    <string name="login_com_conta_google">Login com conta google</string>
    <string name="login_com_conta_facebook">login com conta facebook</string>
    <string name="login_com_conta_apple">login com conta apple</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desconectar">DESCONECTAR</string>
    <string name="channel_name">Notificação PomodoroApp</string>
    <string name="channel_description">Canal de notificação de pomodoros concluídos</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="pausa_curta">Pausa Curta</string>
    <string name="pausa_longa">Pausa Longa</string>
    <string name="titulo_notificacao">Parabéns! Timer concluído</string>
    <string name="texto_notificacao_pc">Você concluiu um Pomodoro, faz uma pausa curta tá! :) </string>
    <string name="texto_notificacao">Pausa Concluída! Hora de voltar para o foco! </string>
    <string name="texto_notificacao_pl">Você concluiu um ciclo,faz uma Pausa Maior agora! ;) </string>
</resources>
