<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteOff"
    tools:context=".domain.Login">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="377dp"
        android:layout_height="674dp"
        android:layout_marginStart="360dp"
        android:alpha="0.7"
        android:contentDescription="@string/cd_background_image"
        android:cropToPadding="false"
        android:scaleType="matrix"
        android:scaleX="1.4"
        android:scaleY="1.4"
        android:src="@drawable/logo_pomodoro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/tv_login_ola"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="754dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/tv_ola"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_login_bemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/tv_bemVindo"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/tv_login_facaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/tv_facaLogin"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_bemVindo"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/tv_email"
        android:textColor="@color/black"
        app:endIconDrawable="@drawable/ic_acount"
        app:endIconMode="custom"
        app:endIconTint="@color/white"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackTie"

            android:fontFamily="@font/quicksand_medium"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/tv_senha"
        android:textColor="@color/black"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_senha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackTie"
            android:fontFamily="@font/quicksand_medium"
            android:maxLines="1"
            android:maxLength="16"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_reset_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.7"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/tv_reset_senha"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_senha" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="380dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_btn_login"
        android:backgroundTint="@color/yellowSecondary"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:icon="@drawable/ic_login"
        app:iconTint="@color/white"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_senha"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tv_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:alpha="0.7"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/tv_cadastre_se"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_entrar_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/tv_ou_entre_com"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro" />

    <ImageView
        android:id="@+id/iv_btn_google"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/login_com_conta_google"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_btn_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_entrar_com"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/iv_btn_facebook"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/login_com_conta_facebook"
        android:scaleType="centerInside"
        android:src="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_entrar_com"
        app:layout_constraintVertical_bias="0.19" />

    <ImageView
        android:id="@+id/iv_btn_apple"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/login_com_conta_apple"
        android:scaleType="centerInside"
        android:src="@drawable/ic_apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_btn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/tv_entrar_com"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
