<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteOff"
    tools:context=".presentation.Cadastro">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="377dp"
        android:layout_height="674dp"
        android:layout_marginStart="360dp"
        android:alpha="0.7"
        android:contentDescription="@string/cd_background_image"
        android:cropToPadding="false"
        android:scaleType="matrix"
        android:scaleX="1.4"
        android:scaleY="1.4"
        android:src="@drawable/logo_pomodoro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/tv_cadastro_ola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/tv_cadastro_ola"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_title_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/tv_crieSuaConta"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/tv_nome"
        android:textColor="@color/black"
        app:endIconDrawable="@drawable/ic_acount"
        app:endIconMode="custom"
        app:endIconTint="@color/white"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_cadastro_nome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackTie"
            android:fontFamily="@font/quicksand_medium"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_cadastro_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/tv_email"
        android:textColor="@color/black"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_mail"
        app:endIconTint="@color/white"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_cadastro_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackTie"
            android:fontFamily="@font/quicksand_medium"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_cadastro_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/tv_senha"
        android:textColor="@color/black"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_cadastro_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_cadastro_senha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackTie"
            android:fontFamily="@font/quicksand_medium"
            android:inputType="textPassword|textImeMultiLine"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="380dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <Button
        android:id="@+id/btn_cadastro"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/yellowSecondary"
        android:text="@string/tv_btn_cadastrar"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_cadastro_senha"
        tools:ignore="VisualLintButtonSize" />



</androidx.constraintlayout.widget.ConstraintLayout>